Import dependencies from debathena-build-depends
We are killing off debathena-build-depends, so bring in its
dependencies that we don't already have somewhere else in
Debathena. (Trac: #1462)

--- a/debian/control
+++ b/debian/control
@@ -12,10 +12,12 @@ Depends: apt-file,
  apt-show-versions,
  build-essential,
  cdbs,
+ config-package-dev,
  debhelper,
  debian-el,
  devscripts,
  devscripts-el,
+ dh-buildinfo,
  dh-make,
  dpatch,
  dpkg-awk,
@@ -23,11 +25,18 @@ Depends: apt-file,
  dpkg-dev-el,
  equivs,
  fakeroot,
+ gnulib,
+ grep-dctrl,
  lintian,
  pbuilder,
+ python-all-dev,
+ python-pyrex,
+ python-setuptools,
+ python-support,
  quilt,
  sbuild,
  wdiff,
+ debathena-aclocal,
  debathena-lintian-config
 Description: Metapackage providing tools for Debathena development
  This metapackage installs a collection of tools used for development
